# autoresearch

./: .gitignore  README.md  modal_app.py  modal_runner.py  program.md  pyproject.toml  run.py
.runner/: modal_app.py  modal_runner.py
autoresearch_runtime/: modal_runner.py  program.md  pyproject.toml
skills/modal-autoresearch/: SKILL.md
skills/modal-autoresearch/agents/: openai.yaml
workspace/: prepare.py  program.md  train.py
